<resources>
    <string name="app_name">kidstory</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">share</string>
    <string name="action_about">about</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="twitterdev"><a href="https://twitter.com/Eman1989">@Eman1989</a></string>
    <string name="twittergraphic"><a href="https://twitter.com/Hanantus">@Hanantus</a></string>
    <string name="txt_dev_title">developed by</string>
    <string name="txt_dev_name">Eiman Basahel</string>
    <string name="txt_graphic_name">Hanan Alsulaiman</string>
    <string name="txt_graphic_title">Story illustrated by</string>

    <string-array name="stories_title">
        <item>قصة يونس عليه السلام</item>
        <item>قصة نوح عليه السلام</item>
        <item>قصة يوسف عليه السلام</item>
    </string-array>

    <!--> Content Description <-->
    <string name="cloud">cloud</string>
    <string name="the_story">The story</string>
    <string name="the_quiz">The Quiz</string>
    <string name="choose_story">choose a story</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="share_msg">Download this app!</string>
    <string name="txt_dev_email">eman.basahel@techiebits.net</string>
    <string name="txt_graphic_email">hanantus@gmail.com</string>
    <string name="dialog_title">No Internet!</string>
    <string name="dialog_message">You have to be connected to Internet to download the content for the first time
        only
    </string>
    <string name="ok">Go To Settings</string>
    <string name="cancel">Cancel</string>
    <string name="widget_title">Prophets Supplications</string>
    <string name="volume_is_muted">Please raise the volume up so you can listen to the story!</string>

</resources>
