<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/spacing_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layoutDirection="rtl"
                tools:showIn="@layout/fragment_about">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:id="@+id/dev_container">

        <LinearLayout android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:id="@+id/devtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/txt_title"
                    android:textStyle="bold"
                    android:text="@string/txt_dev_title"/>
            <ImageButton
                    android:id="@+id/twittericondev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_marginTop="@dimen/spacing_margin"
                    android:src="@drawable/ic_twitter"/>
            <ImageButton
                    android:id="@+id/emailicondev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_marginTop="22dp"
                    android:src="@drawable/ic_email"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/devname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/txt_content"
                    android:text="@string/txt_dev_name"/>

            <TextView
                    android:id="@+id/twitteruserdev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="22dp"
                    android:text="@string/twitterdev"/>

            <TextView
                    android:id="@+id/emaildev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/spacing_margin"
                    android:autoLink="email"/>


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/dev_container"
            android:layout_marginTop="@dimen/spacing_margin">

        <LinearLayout android:layout_width="0dp"
                      android:layout_weight="1"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView
                    android:id="@+id/graphictitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/txt_title"
                    android:textStyle="bold"
                    android:text="@string/txt_graphic_title"/>

            <ImageButton
                    android:id="@+id/twittericongraphic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@null"
                    android:src="@drawable/ic_twitter"/>

            <ImageButton
                    android:id="@+id/emailicongraphic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_margin"
                    android:background="@null"
                    android:src="@drawable/ic_email"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/graphicname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/txt_content"
                    android:text="@string/txt_graphic_name"/>

            <TextView
                    android:id="@+id/twitterusergraphic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="22dp"
                    android:text="@string/twittergraphic"/>

            <TextView
                    android:id="@+id/emailgraphic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/spacing_margin"
                    android:autoLink="email"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
